Adicionado filtro para usuarios
